welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite();
droite();
while (!estSurBiscuit || estFaceMur) {
	avance();

if (estSurBiscuit) {
	porteBiscuit()
	droite();
	drtoie();
	
	while (!estSurBiscuit) {
		avance();
	}
	recule();
	poseBiscuit();
} else {
	droite();
	avance();
	gauche();
	avance();
}

	}